@@ -1409,7 +1409,10 @@ http://www.gnu.org/licenses/ or write to the Free Software Foundation, Inc.,
 # define MPFR_SQRHIGH_TAB -1,-1,-1,-1,-1,-1,-1,-1,0,0,0,0,0,0,0,0,0
 #endif
 #ifndef MPFR_MUL_THRESHOLD
-# define MPFR_MUL_THRESHOLD 40
+# define MPFR_MUL_THRESHOLD 20
+#endif
+#ifndef MPFR_SQR_THRESHOLD
+# define MPFR_SQR_THRESHOLD 20
 #endif
 #ifndef MPFR_EXP_2_THRESHOLD
 # define MPFR_EXP_2_THRESHOLD 100 /* bits */
